@@ -1,8 +1,6 @@
-This lists only the changes for the current release (v1.20) over the last
+This lists only the changes for the current release (v1.21) over the last
 version, since CHANGES is now quite big:
 
-* String.pm : added: scale() 
-*             as_number() uses _scale to scale output
-* Charset.pm: added scale parameter, and scale()
-* subclasses automatically inherit the new scale parameter and stuff
-* 602 tests now (added scale tests)
+* fixed the isa() bug in from_number() which prevented scale() from working
+* fixed doc about scale
+* 606 tests now (new scale tests)
